modal ids, tabs components

--- a/src/app/shared/modal/modal.component.html
+++ b/src/app/shared/modal/modal.component.html
@@ -1,7 +1,7 @@
 <div
   id="modal"
   class="fixed z-50 inset-0 overflow-y-auto"
-  *ngIf="modalService.isModalVisible()"
+  *ngIf="modalService.isModalOpen(modalId)"
 >
   <div
     class="flex items-end justify-center min-h-screen text-center pt-4 px-4 pb-20 sm:block sm:p-0"
