--- a/src/app/user/auth-modal/auth-modal.component.html
+++ b/src/app/user/auth-modal/auth-modal.component.html
@@ -1,46 +1,82 @@
-<app-modal>
+<app-modal [modalId]="modalId">
   <p class="text-2xl font-bold" heading>Your account</p>
 
-  <!-- Tabs -->
-  <ul class="flex flex-wrap mb-4">
-    <li class="flex-auto text-center">
-      <a
-        href="#"
-        class="block rounded py-3 px-4 bg-indigo-400 transition hover:text-white"
-        >Login</a
-      >
-    </li>
-    <li class="flex-auto text-center">
-      <a
-        href="#"
-        class="block rounded py-3 px-4 transition hover:text-indigo-400"
-        >Register</a
-      >
-    </li>
-  </ul>
-
-  <form>
-    <div class="mb-3">
-      <label for="" class="inline-block mb-2">Email</label>
-      <input
-        type="email"
-        class="block w-full py-1.5 px-3 text-gray-200 border border-gray-400 rounded bg-transparent focus:outline-none focus:border-indigo-400 transition duration-500"
-        placeholder="Enter email"
-      />
-    </div>
-    <div class="mb-3">
-      <label for="" class="inline-block mb-2">Password</label>
-      <input
-        type="password"
-        class="block w-full py-1.5 px-3 text-gray-200 border border-gray-400 rounded bg-transparent focus:outline-none focus:border-indigo-400 transition duration-500"
-        placeholder="Password"
-      />
-    </div>
-    <button
-      type="submit"
-      class="block w-full bg-indigo-400 py-1.5 px-3 text-white rounded transition hover:bg-indigo-500"
-    >
-      Submit
-    </button>
-  </form>
+  <app-tabs-container>
+    <app-tab [tabTitle]="'Login'">
+      <form>
+        <div class="mb-3">
+          <label for="" class="inline-block mb-2">Email</label>
+          <input
+            type="email"
+            class="block w-full py-1.5 px-3 text-gray-200 border border-gray-400 rounded bg-transparent focus:outline-none focus:border-indigo-400 transition duration-500"
+            placeholder="Enter email"
+          />
+        </div>
+        <div class="mb-3">
+          <label for="" class="inline-block mb-2">Password</label>
+          <input
+            type="password"
+            class="block w-full py-1.5 px-3 text-gray-200 border border-gray-400 rounded bg-transparent focus:outline-none focus:border-indigo-400 transition duration-500"
+            placeholder="Password"
+          />
+        </div>
+        <button
+          type="submit"
+          class="block w-full bg-indigo-400 py-1.5 px-3 text-white rounded transition hover:bg-indigo-500"
+        >
+          Submit
+        </button>
+      </form>
+    </app-tab>
+    <app-tab [tabTitle]="'Register'">
+      <form>
+        <div class="mb-3">
+          <label for="" class="inline-block mb-2">Name</label>
+          <input
+            type="text"
+            class="block w-full py-1.5 px-3 text-gray-200 border border-gray-400 rounded bg-transparent focus:outline-none focus:border-indigo-400 transition duration-500"
+            placeholder="Enter your name"
+          />
+        </div>
+        <div class="mb-3">
+          <label for="" class="inline-block mb-2">Email</label>
+          <input
+            type="email"
+            class="block w-full py-1.5 px-3 text-gray-200 border border-gray-400 rounded bg-transparent focus:outline-none focus:border-indigo-400 transition duration-500"
+            placeholder="Enter your email"
+          />
+        </div>
+        <div class="mb-3">
+          <label for="" class="inline-block mb-2">Age</label>
+          <input
+            type="text"
+            class="block w-full py-1.5 px-3 text-gray-200 border border-gray-400 rounded bg-transparent focus:outline-none focus:border-indigo-400 transition duration-500"
+            placeholder="Enter your age"
+          />
+        </div>
+        <div class="mb-3">
+          <label for="" class="inline-block mb-2">New password</label>
+          <input
+            type="password"
+            class="block w-full py-1.5 px-3 text-gray-200 border border-gray-400 rounded bg-transparent focus:outline-none focus:border-indigo-400 transition duration-500"
+            placeholder="New password"
+          />
+        </div>
+        <div class="mb-3">
+          <label for="" class="inline-block mb-2">New password</label>
+          <input
+            type="password"
+            class="block w-full py-1.5 px-3 text-gray-200 border border-gray-400 rounded bg-transparent focus:outline-none focus:border-indigo-400 transition duration-500"
+            placeholder="Confirm password"
+          />
+        </div>
+        <button
+          type="submit"
+          class="block w-full bg-indigo-400 py-1.5 px-3 text-white rounded transition hover:bg-indigo-500"
+        >
+          Submit
+        </button>
+      </form>
+    </app-tab>
+  </app-tabs-container>
 </app-modal>
